# stache

./: .travis.yml  CHANGELOG.md  LICENSE.md  README.md  cabal.project  stache.cabal  stack.yaml
.github/workflows/: ci.yaml
Text/: Mustache.hs
Text/Mustache/: Compile.hs  Parser.hs  Render.hs  Type.hs
Text/Mustache/Compile/: TH.hs
app/: Main.hs
bench/: Main.hs
bench-data/: comprehensive.mustache  escaped-var.mustache  inverted-section.mustache  lorem-ipsum.mustache  nested-sections.mustache  partial.mustache  section.mustache  unescaped-var-spec.mustache  unescaped-var.mustache
example/: LICENSE  example.cabal
example/app/: Main.hs
example/templates/: main.mustache  myPartial.mustache
mustache-spec/: Spec.hs
specification/: interpolation.yml  inverted.yml  sections.yml
templates/: bar.mustache  foo.mustache
tests/Text/Mustache/: ParserSpec.hs  RenderSpec.hs  TypeSpec.hs
tests/Text/Mustache/Compile/: THSpec.hs
