cabal-version:   2.4
name:            stache
version:         2.3.3
license:         MIT
license-file:    LICENSE
maintainer:      Mark Karpov <markkarpov92@gmail.com>
author:          Mark Karpov <markkarpov92@gmail.com>
tested-with:     ghc ==8.10.7 ghc ==9.0.2 ghc ==9.2.1
homepage:        https://github.com/stackbuilders/stache
bug-reports:     https://github.com/stackbuilders/stache/issues
synopsis:        Mustache templates for Haskell
description:     Mustache templates for Haskell.
category:        Text
build-type:      Simple
data-files:
    bench-data/*.mustache
    specification/*.yml
    templates/*.mustache

extra-doc-files:
    CHANGELOG.md
    CODE_OF_CONDUCT.md
    CONTRIBUITING.md
    README.md

source-repository head
    type:     git
    location: https://github.com/stackbuilders/stache.git

flag dev
    description: Turn on development settings.
    default:     False
    manual:      True

library
    exposed-modules:
        Text.Mustache
        Text.Mustache.Compile
        Text.Mustache.Compile.TH
        Text.Mustache.Parser
        Text.Mustache.Render
        Text.Mustache.Type

    default-language: Haskell2010
    build-depends:
        aeson >=2 && <3,
        base >=4.13 && <5.0,
        bytestring >=0.10 && <0.12,
        containers >=0.5 && <0.7,
        deepseq >=1.4 && <1.5,
        directory >=1.2 && <1.4,
        filepath >=1.2 && <1.5,
        megaparsec >=7.0 && <10.0,
        mtl >=2.1 && <3.0,
        template-haskell >=2.11 && <2.19,
        text >=1.2 && <2.1,
        vector >=0.11 && <0.14

    if flag(dev)
        ghc-options: -O0 -Wall -Werror -fsimpl-tick-factor=150

    else
        ghc-options: -O2 -Wall -fsimpl-tick-factor=150

    if flag(dev)
        ghc-options:
            -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns
            -Wnoncanonical-monad-instances

executable stache
    main-is:          Main.hs
    hs-source-dirs:   app
    other-modules:    Paths_stache
    autogen-modules:  Paths_stache
    default-language: Haskell2010
    build-depends:
        aeson >=2 && <3,
        base >=4.13 && <5.0,
        gitrev >=1.3 && <1.4,
        optparse-applicative >=0.14 && <0.18,
        stache,
        text >=0.2 && <2.1,
        yaml >=0.8 && <0.12,
        filepath >=1.2 && <1.5

    if flag(dev)
        ghc-options:
            -Wall -Werror -Wcompat -Wincomplete-record-updates
            -Wincomplete-uni-patterns -Wnoncanonical-monad-instances

    else
        ghc-options: -O2 -Wall

test-suite tests
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    build-tool-depends: hspec-discover:hspec-discover >=2.0 && <3.0
    hs-source-dirs:     tests
    other-modules:
        Text.Mustache.Compile.THSpec
        Text.Mustache.ParserSpec
        Text.Mustache.RenderSpec
        Text.Mustache.TypeSpec

    default-language:   Haskell2010
    build-depends:
        aeson >=2 && <3,
        base >=4.13 && <5.0,
        containers >=0.5 && <0.7,
        hspec >=2.0 && <3.0,
        hspec-megaparsec >=2.0 && <3.0,
        megaparsec >=7.0 && <10.0,
        stache,
        template-haskell >=2.11 && <2.19,
        text >=1.2 && <2.1

    if flag(dev)
        ghc-options: -O0 -Wall -Werror

    else
        ghc-options: -O2 -Wall

test-suite mustache-spec
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   mustache-spec
    default-language: Haskell2010
    build-depends:
        aeson >=2 && <3,
        base >=4.13 && <5.0,
        bytestring >=0.10 && <0.12,
        containers >=0.5 && <0.7,
        file-embed,
        hspec >=2.0 && <3.0,
        megaparsec >=7.0 && <10.0,
        stache,
        text >=1.2 && <2.1,
        yaml >=0.8 && <0.12

    if flag(dev)
        ghc-options: -Wall -Werror

    else
        ghc-options: -O2 -Wall

benchmark bench
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   bench
    default-language: Haskell2010
    build-depends:
        aeson >=2 && <3,
        base >=4.13 && <5.0,
        criterion >=0.6.2.1 && <1.6,
        deepseq >=1.4 && <1.5,
        megaparsec >=7.0 && <10.0,
        stache,
        text >=1.2 && <2.1

    if flag(dev)
        ghc-options: -O2 -Wall -Werror

    else
        ghc-options: -O2 -Wall
