cabal-version:      3.0
name:               example
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             William R. Arellano
maintainer:         arellanowr@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable example
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4.15 && <5
                    , aeson
                    , text
                    , megaparsec
                    , stache
    hs-source-dirs:   app
    default-language: Haskell2010
